added template for report element

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,15 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.PickPal" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.PickPal" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
     <style name="Theme.PickPal" parent="Base.Theme.PickPal" />
+
+    <style name="reportCard" parent="Widget.MaterialComponents.CardView">
+        <item name="strokeColor">@color/orange</item>
+        <item name="strokeWidth">3dp</item>
+        <item name="backgroundColor">@color/white</item>
+    </style>
 </resources>
