--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="purple">#5B5A80</color>
+    <color name="orange">#EF7035</color>
+    <color name="green">#ACBD6F</color>
+    <color name="lilac">#CBCBE7</color>
+    <color name="red">#EF3535</color>
 </resources>
