added template for report element

--- a/app/src/main/res/layout/activity_moderator_module.xml
+++ b/app/src/main/res/layout/activity_moderator_module.xml
@@ -49,11 +49,11 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Moderator Dashboard"
+        android:text="@string/moderator_dashboard"
         android:textColor="@color/purple"
         android:textSize="42sp"
-        android:layout_gravity="left"
-        android:lineHeight="50dp"
+        android:layout_gravity="start"
+        android:lineSpacingMultiplier="0.8"
         android:fontFamily="@font/poppins_bold"
         android:layout_marginStart="15dp"
         android:layout_marginTop="20dp"
