rename loginActivity and welcomeActivity

--- a/app/src/main/res/layout/layout_root.xml
+++ b/app/src/main/res/layout/layout_root.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <include layout="@layout/container_welcome_screen" />
+        <include layout="@layout/activity_welcome" />
 
     </FrameLayout>
 
