--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -62,6 +62,7 @@
         android:layout_gravity="top|left"
         android:scaleType="centerInside"
         android:src="@drawable/img_back_button" />
+
     <!-- Welcome Back Text -->
     <TextView
         android:id="@+id/txt_welcome_back"
@@ -167,19 +168,19 @@
                 android:background="@drawable/img_email_address_box"
                 android:scaleType="centerCrop" />
 
-            <TextView
-                android:id="@+id/txt_username"
-                android:layout_width="wrap_content"
-                android:layout_height="26dp"
+            <EditText
+                android:id="@+id/username"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="37dp"
                 android:layout_marginTop="15dp"
-                android:layout_marginBottom="11.17dp"
                 android:layout_gravity="left"
                 android:gravity="center_horizontal|center_vertical"
                 android:includeFontPadding="false"
                 android:maxLines="1"
                 android:singleLine="true"
-                android:text="Username"
+                android:hint="Username"
+                android:inputType="textPersonName"
                 android:fontFamily="@font/poppins_regular"
                 android:textColor="#FF000000"
                 android:textSize="17dp" />
@@ -225,10 +226,10 @@
                     android:background="@drawable/img_password_box"
                     android:scaleType="centerCrop" />
 
-                <TextView
-                    android:id="@+id/txt_password"
-                    android:layout_width="wrap_content"
-                    android:layout_height="26dp"
+                <EditText
+                    android:id="@+id/password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginLeft="40dp"
                     android:layout_marginTop="13dp"
                     android:layout_gravity="top|left"
@@ -236,7 +237,8 @@
                     android:includeFontPadding="false"
                     android:maxLines="1"
                     android:singleLine="true"
-                    android:text="Password"
+                    android:hint="Password"
+                    android:inputType="textPassword"
                     android:fontFamily="@font/poppins_regular"
                     android:textColor="#FF000000"
                     android:textSize="17dp" />
