--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -173,9 +173,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="37dp"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="5dp"
                 android:layout_gravity="left"
-                android:gravity="center_horizontal|center_vertical"
+                android:gravity="start|center_vertical"
                 android:includeFontPadding="false"
                 android:maxLines="1"
                 android:singleLine="true"
@@ -231,9 +231,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="40dp"
-                    android:layout_marginTop="13dp"
+                    android:layout_marginTop="5dp"
                     android:layout_gravity="top|left"
-                    android:gravity="center_horizontal|center_vertical"
+                    android:gravity="start|center_vertical"
                     android:includeFontPadding="false"
                     android:maxLines="1"
                     android:singleLine="true"
