--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,8 +2,6 @@
 
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container_login"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -96,56 +94,6 @@
         android:textColor="#FFFFFFFF"
         android:textSize="15dp" />
 
-    <!-- Forgot Password Text -->
-    <TextView
-        android:id="@+id/txt_forgot_password"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:layout_marginLeft="240dp"
-        android:layout_marginTop="432dp"
-        android:layout_gravity="top|left"
-        android:gravity="left|center_vertical"
-        android:includeFontPadding="false"
-        android:lineHeight="40dp"
-        android:maxLines="1"
-        android:text="Forgot password?"
-        android:fontFamily="@font/poppins_regular"
-        android:textColor="#FFFFFFFF"
-        android:textSize="13dp" />
-
-    <!-- Sign Up -->
-    <TextView
-        android:id="@+id/txt_dont_have_account"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:layout_marginLeft="75dp"
-        android:layout_marginTop="613dp"
-        android:layout_gravity="top|left"
-        android:gravity="left|center_vertical"
-        android:includeFontPadding="false"
-        android:lineHeight="40dp"
-        android:maxLines="1"
-        android:text="Don’t have an account? "
-        android:fontFamily="@font/poppins_regular"
-        android:textColor="#FFFFFFFF"
-        android:textSize="13dp" />
-
-    <TextView
-        android:id="@+id/txt_sign_up"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:layout_marginLeft="233dp"
-        android:layout_marginTop="612dp"
-        android:layout_gravity="top|left"
-        android:gravity="left|center_vertical"
-        android:includeFontPadding="false"
-        android:lineHeight="40dp"
-        android:maxLines="1"
-        android:text="Sign Up!"
-        android:fontFamily="@font/poppins_bold"
-        android:textColor="#FFFFFFFF"
-        android:textSize="13dp" />
-
     <!-- Username Input -->
     <FrameLayout
         android:id="@+id/container_username_input"
@@ -156,16 +104,16 @@
         android:layout_gravity="top|left">
 
         <FrameLayout
-            android:id="@+id/container_email_address_box"
+            android:id="@+id/container_username_box"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/container_email_address_box">
+            android:background="@drawable/container_input_box">
 
             <ImageView
-                android:id="@+id/img_email_address_box"
+                android:id="@+id/img_username_box"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/img_email_address_box"
+                android:background="@drawable/input_box"
                 android:scaleType="centerCrop" />
 
             <EditText
@@ -173,6 +121,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="37dp"
+                android:layout_marginRight="20dp"
                 android:layout_marginTop="5dp"
                 android:layout_gravity="left"
                 android:gravity="start|center_vertical"
@@ -223,7 +172,7 @@
                     android:id="@+id/img_password_box"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@drawable/img_password_box"
+                    android:background="@drawable/input_box"
                     android:scaleType="centerCrop" />
 
                 <EditText
@@ -231,6 +180,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="40dp"
+                    android:layout_marginRight="20dp"
                     android:layout_marginTop="5dp"
                     android:layout_gravity="top|left"
                     android:gravity="start|center_vertical"
@@ -256,37 +206,72 @@
             android:src="@drawable/lock_icon" />
     </FrameLayout>
 
+    <!-- Forgot Password Text -->
+    <TextView
+        android:id="@+id/txt_forgot_password"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_marginLeft="240dp"
+        android:layout_marginTop="432dp"
+        android:layout_gravity="top|left"
+        android:gravity="left|center_vertical"
+        android:includeFontPadding="false"
+        android:lineHeight="40dp"
+        android:maxLines="1"
+        android:text="Forgot password?"
+        android:fontFamily="@font/poppins_regular"
+        android:textColor="#FFFFFFFF"
+        android:textSize="13dp" />
+
     <!-- Login Button -->
-    <FrameLayout
-        android:id="@+id/container_group3"
+    <Button
+        android:id="@+id/btn_login"
         android:layout_width="246dp"
         android:layout_height="43dp"
         android:layout_marginLeft="57dp"
         android:layout_marginTop="573dp"
         android:layout_gravity="top|left"
-        android:background="@drawable/container_group3">
+        android:background="@drawable/img_rectangle"
+        android:textAllCaps="false"
+        android:fontFamily="@font/poppins_bold"
+        android:gravity="center"
+        android:text="Login"
+        android:textColor="#FFEF7035"
+        android:textSize="25dp" />
 
-        <ImageView
-            android:id="@+id/img_rectangle"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/img_rectangle"
-            android:scaleType="centerCrop" />
 
-        <TextView
-            android:id="@+id/txt_login"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:fontFamily="@font/poppins_bold"
-            android:includeFontPadding="false"
-            android:lineHeight="40dp"
-            android:maxLines="1"
-            android:text="Login"
-            android:textColor="#FFEF7035"
-            android:textSize="25dp" />
+    <!-- Sign Up -->
+    <TextView
+        android:id="@+id/signup_prompt"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_marginLeft="75dp"
+        android:layout_marginTop="613dp"
+        android:layout_gravity="top|left"
+        android:gravity="left|center_vertical"
+        android:includeFontPadding="false"
+        android:lineHeight="40dp"
+        android:maxLines="1"
+        android:text="Don’t have an account? "
+        android:fontFamily="@font/poppins_regular"
+        android:textColor="#FFFFFFFF"
+        android:textSize="13dp" />
 
-    </FrameLayout>
+    <TextView
+        android:id="@+id/signup_link"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_marginLeft="233dp"
+        android:layout_marginTop="612dp"
+        android:layout_gravity="top|left"
+        android:gravity="left|center_vertical"
+        android:includeFontPadding="false"
+        android:lineHeight="40dp"
+        android:maxLines="1"
+        android:text="Sign Up!"
+        android:fontFamily="@font/poppins_bold"
+        android:textColor="#FFFFFFFF"
+        android:textSize="13dp" />
+
 
 </FrameLayout>
