--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -14,4 +14,15 @@
         android:textSize="18sp"
         android:text="Profile Page" />
 
+    <Button
+        android:id="@+id/viewdashboard"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="80dp"
+        android:text="I am a moderator"
+        android:backgroundTint="@color/green"
+        android:textColor="@color/white"
+        android:onClick="viewModDash"/>
+
 </FrameLayout>
