--- a/app/src/main/res/layout/report_list.xml
+++ b/app/src/main/res/layout/report_list.xml
@@ -88,7 +88,8 @@
                 android:text="@string/delete"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
-                android:textSize="15sp" />
+                android:textSize="15sp"
+                android:onClick="onDeleteClicked"/>
 
             <!-- Dimiss Button -->
             <Button
@@ -101,7 +102,8 @@
                 android:text="@string/dismiss"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
-                android:textSize="15sp" />
+                android:textSize="15sp"
+                android:onClick="onDismissClicked"/>
 
         </LinearLayout>
 
