--- a/app/src/main/res/layout/club_list.xml
+++ b/app/src/main/res/layout/club_list.xml
@@ -4,15 +4,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
+    android:layout_margin="10dp"
     app:cardCornerRadius="20dp"
-    app:contentPadding="16dp">
+    app:contentPadding="10dp"
+    android:elevation="5dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="16dp">
+        android:padding="12dp">
 
         <!-- Horizontal layout for image, club name/member count, and join button -->
         <LinearLayout
@@ -25,7 +26,8 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:src="@drawable/user_pic"
-                android:layout_gravity="center_vertical"/>
+                android:layout_gravity="center_vertical"
+                android:scaleType="centerCrop"/>
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -59,7 +61,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Join"
-                android:backgroundTint="@color/orange"
+                android:background="@drawable/club_join_button"
                 android:textColor="@android:color/white"
                 android:padding="8dp" />
 
@@ -85,7 +87,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="View"
-                android:backgroundTint="@color/green"
+                android:background="@drawable/club_view_button"
                 android:textColor="@android:color/white"
                 android:padding="8dp"/>
 
